---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis

---------------------------
  Jackdmp changes log
---------------------------

2009-11-17 Stephane Letz  <letz@grame.fr>

	* In JackCoreAudio driver, clock drift compensation in aggregated devices working.
	* In JackCoreAudio driver, clock drift compensation semantic changed a bit : when on, does not activate if not needed (same clock domain).

2009-11-16 Stephane Letz  <letz@grame.fr>

	* In JackCoreAudio driver, (possibly) clock drift compensation when needed in aggregated devices.

2009-11-14 Stephane Letz  <letz@grame.fr>

	* Sync with JACK1 : -r parameter now used for no-realtime, realtime (-R) is now default, usable backend given vie platform.

2009-11-13 Stephane Letz  <letz@grame.fr>

	* Better memory allocation error checking in ringbuffer.c, weak import improvements.
	* Memory allocation error checking for jack_client_new and jack_client_open (server and client side).
	* Memory allocation error checking in server for RPC.
	* Simplify server temporary mode : now use a JackTemporaryException.
	* Lock/Unlock shared memory segments (to test...).

2009-11-12 Stephane Letz  <letz@grame.fr>

	* Better memory allocation error checking on client (library) side. 

2009-11-11 Stephane Letz  <letz@grame.fr>

	* Correct JackCoreAudio driver when empty strings are given as -C, -P or -d parameter. 

2009-11-10 Stephane Letz  <letz@grame.fr>

	* Correct JackInfoShutdownCallback prototype, two new JackClientProcessFailure and JackClientZombie JackStatus code.  

2009-11-09 Stephane Letz  <letz@grame.fr>

	* Correct JackGraphManager::GetBuffer for the "client loop with one connection" case : buffer must be copied.

2009-11-07 Stephane Letz  <letz@grame.fr>
